--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,15 +62,9 @@ jobs:
           - os: ubuntu-latest
             artifact_name: httpfileserv
             asset_name: httpfileserv-linux
-            build_command: |
-              make
-              cp bin/httpfileserv ./httpfileserv
           - os: windows-latest
             artifact_name: httpfileserv.exe
             asset_name: httpfileserv-windows.exe
-            build_command: |
-              call build.bat
-              copy bin\httpfileserv.exe .\httpfileserv.exe
 
     steps:
       - name: Checkout code
@@ -88,9 +82,19 @@ jobs:
         if: matrix.os == 'windows-latest'
         uses: ilammy/msvc-dev-cmd@v1
 
-      - name: Build
-        run: ${{ matrix.build_command }}
-        shell: bash
+      - name: Build (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          make
+          cp bin/httpfileserv ./httpfileserv
+
+      - name: Build (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: cmd
+        run: |
+          build.bat
+          if not exist bin\httpfileserv.exe (echo "Build failed" && exit /b 1)
+          copy bin\httpfileserv.exe .\httpfileserv.exe
 
       - name: Upload binaries
         uses: actions/upload-artifact@v4
